<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_shortcut_create">Term shortcut</string>
    <string name="activity_term_here_title">Term here</string>
    <string name="add_a_file">Add a File</string>
    <string name="add_a_language">Add a Language</string>
    <string name="add_activity">Add an Activity</string>
    <string name="add_key_value">Add a key/value:</string>
    <string name="addshortcut_arguments_label">Arguments:</string>
    <string name="addshortcut_button_find_command">Find command</string>
    <string name="addshortcut_button_text_icon">Text icon</string>
    <string name="addshortcut_command_hint">command</string>
    <string name="addshortcut_command_window_instructions">Command window requires full path, no arguments. For other commands use Arguments window (ex: cd /sdcard).</string>
    <string name="addshortcut_example_hint">--example=\"a\"</string>
    <string name="addshortcut_make_text_icon">MAKE TEXT ICON</string>
    <string name="addshortcut_navigator_title">SELECT SHORTCUT TARGET</string>
    <string name="addshortcut_shortcut_label">Shortcut label:</string>
    <string name="addshortcut_text_icon_instructions" />
    <string name="addshortcut_title">Term shortcut</string>
    <string name="all_rules_applied">All rules applied.</string>
    <string name="alt_sends_esc">Alt key sends ESC</string>
    <string name="alt_sends_esc_summary_off">Alt key does not send ESC.</string>
    <string name="alt_sends_esc_summary_on">Alt key sends ESC.</string>
    <string name="apk_building">APK Building</string>
    <string name="apk_decoding">APK Decoding</string>
    <string name="apk_saved_tip">Succeed! APK saved to SD card: %s</string>
    <string name="apk_savedas_1">APK saved as %s</string>
    <string name="app_display">App Display</string>
    <string name="app_list_order">App List Ordered By</string>
    <string name="app_name">APK Builder</string>
    <string name="app_theme">App Theme</string>
    <string name="appearance">Appearance</string>
    <string name="application_name">Application Name</string>
    <string name="application_terminal">Terminal Emulator</string>
    <string name="apply_the_patch">Apply the Patch</string>
    <string name="assemble_dex_detail" formatted="false">%d/%d files assembled</string>
    <string name="assemble_dex_file">Assemble DEX file</string>
    <string name="audio_summary">%d audios</string>
    <string name="audios_captical">AUDIOS</string>
    <string name="auto_import">Auto Import</string>
    <string name="auto_translation">Auto Translation</string>
    <string name="background">Background</string>
    <string name="bg_color">BG Color</string>
    <string name="build">Build</string>
    <string name="build_finished">Build finished</string>
    <string name="build_in_progress_tip">Previous build is still in progress. Cannot start another one.</string>
    <string name="build_ongoing">Build is ongoing</string>
    <string name="build_script">Build Script</string>
    <string name="build_still_running_tip">Please be noted: build may be still running after exit this page, you could check the build task in status bar.</string>
    <string name="cancelled_by_user">Cancelled by user</string>
    <string name="cannot_find_ext_sdcard">Cannot find the external sd card.</string>
    <string name="cannot_find_java_file">Cannot find decoded java file.</string>
    <string name="cannot_find_res">Cannot find resources to build the APK.</string>
    <string name="cannot_load_project_info">Cannot load project information.</string>
    <string name="cannot_open_as_wrong_place">"Cannot open the file, please put the project to 'ApkBuilder' directory of the storage."</string>
    <string name="cannot_open_file">Cannot open file: %s</string>
    <string name="cannot_open_xxx">Cannot open %s</string>
    <string name="cannot_parse_apk">Cannot parse the apk file</string>
    <string name="cannot_rename_decode_folder">Cannot rename the decoding directory.</string>
    <string name="cannot_save_project">Cannot save project to file.</string>
    <string name="case_insensitive">Case insensitive</string>
    <string name="choose_project_location">Please choose a location for the project</string>
    <string name="circle_dependency">Circle project dependency detected: %s</string>
    <string name="classes2dex_timeout">Timeout (classes -> dex)</string>
    <string name="classes2dex_timeout_desc">It may take a lot of time to convert classes to dex file. Here you could set a threshold value which indicates timeout.</string>
    <string name="clean_garbage">Clean Garbage</string>
    <string name="clean_garbage_summary">Click here to clean the temporary files.</string>
    <string name="cleanup">Clean up</string>
    <string name="clipboard_no_text">No text in clipboard.</string>
    <string name="close">Close</string>
    <string name="close_window">Close window</string>
    <string name="code">Code:</string>
    <string name="code_snippet">Code Snippet</string>
    <string name="color">Color</string>
    <string name="colormixer_alpha">A</string>
    <string name="colormixer_blue">B</string>
    <string name="colormixer_cancel">Cancel</string>
    <string name="colormixer_green">G</string>
    <string name="colormixer_red">R</string>
    <string name="colormixer_set">Set</string>
    <string name="colorpad">Color Pad</string>
    <string name="colorvalue_icon_text_entry_hint">Enter icon text</string>
    <string name="colorvalue_label_lock_button_column">LOCK</string>
    <string name="colorvalue_letter_alpha">α</string>
    <string name="colorvalue_letter_blue">B</string>
    <string name="colorvalue_letter_green">G</string>
    <string name="colorvalue_letter_red">R</string>
    <string name="comment_lines">Comment Lines</string>
    <string name="common_edit">Common Edit</string>
    <string name="compile_module_x">Compile module: %s</string>
    <string name="compile_source_code">Compile Source Code</string>
    <string name="compose">Compose</string>
    <string name="compose_error">Compose Error:</string>
    <string name="compression_level">Compression Level</string>
    <string name="compression_level_summary">Lower level has better speed, but with bad compression ratio, thus make the APK bigger.</string>
    <string name="confirm_dir_replace">Confirm Directory Replace</string>
    <string name="confirm_window_close_message">Close this window?</string>
    <string name="control_key_dialog_control_disabled_text">No control key set.</string>
    <string name="control_key_dialog_control_text">"CTRLKEY Space : Control-@ (NUL)
CTRLKEY A..Z : Control-A..Z
CTRLKEY 5 : Control-]
CTRLKEY 6 : Control-^
CTRLKEY 7 : Control-_
CTRLKEY 9 : F11
CTRLKEY 0 : F12"</string>
    <string name="edit_build_script_summary">Click here to edit the build script which is used in terminal.</string>
    <string name="empty_activity">Empty Activity</string>
    <string name="extract">Extract</string>
    <string name="flashlight">Flashlight</string>
    <string name="image_downloader">Image Downloader</string>
    <string name="input_start_url">Please input the start URL:</string>
    <string name="input_timeout_mins">Please input the timeout value (how many minutes)</string>
    <string name="install_location">Install Location</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="list_activity">List Activity</string>
    <string name="live_wallpaper">Live Wallpaper</string>
    <string name="max_sdk_version">Maximum SDK Version</string>
    <string name="min_sdk_version">Minimum SDK Version</string>
    <string name="name">Name</string>
    <string name="package_name">Package Name</string>
    <string name="package_rename_method">Package Rename Method</string>
    <string name="path">Path</string>
    <string name="pkg_rename_notice">Please Note: Package rename is more likely not to work, depending on how the app is written (or even protected).</string>
    <string name="rename">Rename</string>
    <string name="rename_in_dex">Rename package name in DEX file(s) [Beta version yet. To improve the success rate, please keep the length unchanged, and do as minor change as possible, like change com.android to com.androie]</string>
    <string name="rename_in_resources">Rename the package name in resources.arsc</string>
    <string name="sample_code">Sample Code</string>
    <string name="save">Save</string>
    <string name="setting_activity">Setting Activity</string>
    <string name="sign_apk_with">Sign APK with</string>
    <string name="sign_apk_with_summary">Specify which key is to used to sign the APK.</string>
    <string name="size">Size</string>
    <string name="sqlite_demo">SQLite Demo</string>
    <string name="start_url">Start URL</string>
    <string name="start_url_summary">Specify the start URL of image downloader.</string>
    <string name="str_app_name">App Name</string>
    <string name="target_sdk_version">Target SDK Version</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="web_wrapper">Web Wrapper</string>
</resources>