<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/overview_layout"
        android:background="@color/littleblue"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:id="@id/apk_icon"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="4.0dip"
            android:layout_marginRight="12.0dip"
            android:layout_marginBottom="4.0dip"
            android:contentDescription="@android:string/no" />
        <TextView
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:textColor="@color/lightblack"
            android:layout_gravity="center"
            android:id="@id/apk_label"
            android:padding="2.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>
    <ScrollView
        android:background="#ffffffff"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14.0sp"
                    android:textColor="@color/lightblue"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launcher_icon" />
                <ImageView
                    android:id="@id/launcher_icon"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_marginLeft="8.0dip"
                    android:scaleType="fitCenter"
                    android:contentDescription="@android:string/no" />
            </LinearLayout>
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/str_app_name" />
            <EditText
                android:textSize="14.0sp"
                android:id="@id/et_appname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/package_name" />
            <EditText
                android:textSize="14.0sp"
                android:id="@id/et_pkgname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />
            <LinearLayout
                android:orientation="vertical"
                android:id="@id/layout_rename_extra"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="12.0sp"
                    android:textStyle="italic"
                    android:textColor="@color/lightblue"
                    android:id="@id/tv_rename_notice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pkg_rename_notice" />
                <TextView
                    android:textSize="14.0sp"
                    android:textColor="@color/lightblue"
                    android:id="@id/tv_rename_method"
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dip"
                    android:text="@string/package_rename_method" />
                <Spinner
                    android:textSize="14.0sp"
                    android:id="@id/rename_method_spinner"
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:textSize="14.0sp"
                    android:textColor="@color/lightblue"
                    android:id="@id/cb_rename_resource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rename_in_resources" />
                <CheckBox
                    android:textSize="14.0sp"
                    android:textColor="@color/lightblue"
                    android:id="@id/cb_rename_dex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rename_in_dex" />
            </LinearLayout>
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/install_location" />
            <Spinner
                android:textSize="14.0sp"
                android:id="@id/location_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/version_code" />
            <EditText
                android:textSize="14.0sp"
                android:id="@id/et_vercode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:id="@id/tv_vername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/version_name" />
            <EditText
                android:textSize="14.0sp"
                android:id="@id/et_vername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:id="@id/tv_minSdkVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/min_sdk_version" />
            <EditText
                android:textSize="14.0sp"
                android:id="@id/et_minSdkVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:id="@id/tv_targetSdkVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/target_sdk_version" />
            <EditText
                android:textSize="14.0sp"
                android:id="@id/et_targetSdkVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/lightblue"
                android:id="@id/tv_maxSdkVersion"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/max_sdk_version" />
            <EditText
                android:textSize="14.0sp"
                android:id="@id/et_maxSdkVersion"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:background="@color/littleblue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@id/btn_save"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="1.0"
            style="@style/button" />
        <Button
            android:id="@id/btn_close"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_weight="1.0"
            style="@style/button" />
    </LinearLayout>
</LinearLayout>